--- a/2-14Mission08/2-14Mission08.csproj
+++ b/2-14Mission08/2-14Mission08.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>_2_14Mission08</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
